--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
-    <meta charset="UTF-8">
+    <title>Contenedor Simulador</title>
+<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página Web Simple</title>
+    <title>Simulador de Carga Buqueportacontenedores</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -13,10 +14,10 @@
         h1 {
             color: #333;
         }
-    </style>
+</style>
+    <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
-    <h1>Bienvenido a mi página web</h1>
-    <p>Esta es una página web muy simple.</p>
 </body>
 </html>
